# GlobalProtect-openconnect

./: .clang-format  .codespellrc  .dockerignore  .editorconfig  .gitignore  .gitmodules  CLI_BUILD_SUCCESS.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  GlobalProtect-openconnect.pro  IMPLEMENTATION_SUMMARY.md  Makefile  Makefile.pixi  PIXI_CONVERSION.md  PKGBUILD.template  README.md  RUST_CODE_REVIEW.md  changelog.md  clippy.toml  cmakew  com.yuezk.gp.policy  deny.toml  flake.nix  gpclient-callback.desktop  pixi.toml  recipe-cli.yaml  recipe.yaml  rustfmt.toml  version.h.in
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
GPClient/: CMakeLists.txt  GPClient.pro  cdpcommand.cpp  cdpcommand.h  cdpcommandmanager.cpp  cdpcommandmanager.h  challengedialog.cpp  challengedialog.h  challengedialog.ui  com.yuezk.qt.gpclient.desktop  com.yuezk.qt.gpclient.desktop.in  com.yuezk.qt.gpclient.metainfo.xml  com.yuezk.qt.gpclient.metainfo.xml.in  enhancedwebpage.cpp  enhancedwebpage.h  enhancedwebview.cpp  enhancedwebview.h  gatewayauthenticator.cpp  gatewayauthenticator.h  gatewayauthenticatorparams.cpp  gatewayauthenticatorparams.h  gpclient.cpp  gpclient.h  gpclient.ui  gpgateway.cpp  gpgateway.h  gphelper.cpp  gphelper.h  gpservice_interface.cpp  gpservice_interface.h  loginparams.cpp  loginparams.h  main.cpp  normalloginwindow.cpp  normalloginwindow.h  normalloginwindow.ui  portalauthenticator.cpp  portalauthenticator.h  portalconfigresponse.cpp  portalconfigresponse.h  (+16 more)
GPService/: .qmake.stash  CMakeLists.txt  GPService  GPService.pro  gp.conf  gpservice.cpp  gpservice.h  gpservice.xml  gpservice_adaptor.cpp  gpservice_adaptor.h  main.cpp  sigwatch.h
GPService/dbus/: com.yuezk.qt.GPService.conf  com.yuezk.qt.GPService.conf.in  com.yuezk.qt.GPService.service  com.yuezk.qt.GPService.service.in
GPService/systemd/: gpservice.service  gpservice.service.in
apps/gpauth/: Cargo.toml  build.rs  index.html  tauri.conf.json
apps/gpauth/src/: auth_messenger.rs  auth_window.rs  browser_authenticator.rs  cli.rs  common.rs  lib.rs  main.rs  unix.rs  webview_auth.rs
apps/gpclient/: Cargo.toml  build.rs
apps/gpclient/src/: cli.rs  connect.rs  disconnect.rs  hip.rs  launch_gui.rs  main.rs  session.rs
apps/gpclient/src/connect/: args.rs  credential.rs  gateway.rs  mod.rs
apps/gpclient/templates/: hip_report.xml
apps/gpgui-helper/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/gpgui-helper/src-tauri/capabilities/: default.json
apps/gpgui-helper/src-tauri/icons/: icon.icns
apps/gpgui-helper/src-tauri/src/: app.rs  cli.rs  downloader.rs  lib.rs  main.rs  updater.rs
apps/gpservice/: Cargo.toml  build.rs  com.yuezk.gpservice.policy
apps/gpservice/src/: cli.rs  handlers.rs  main.rs  routes.rs  vpn_task.rs  ws_connection.rs  ws_server.rs
cmake/: Add3rdParty.cmake  CPM.cmake  FindNetworkManager.cmake
common/: Cargo.toml  build.rs
common/src/: client.rs  connection.rs  request.rs  server.rs
common/src/cmd/: disconnect.rs  mod.rs  status.rs
common/src/vpn/: ffi.rs  mod.rs  vpn.c  vpn.h
crates/auth/: Cargo.toml
crates/auth/src/: authenticator.rs  browser.rs  browser_auth.rs  lib.rs  webview.rs  webview_auth.rs
crates/auth/src/browser/: auth_server.rs  browser_auth.rs
crates/auth/src/browser_auth/: auth_server.rs  browser_auth_ext.rs  browser_auth_impl.rs
crates/auth/src/webview/: auth_messenger.rs  auth_response.rs  gtk.rs  macos.rs  navigation_delegate.rs  response_reader.rs  unix.rs  webview_auth.rs  windows.rs
crates/auth/src/webview_auth/: auth_messenger.rs  auth_response.rs  auth_settings.rs  macos.rs  navigation_delegate.rs  unix.rs  webview_auth_ext.rs
crates/gpapi/: Cargo.toml  LICENSE  build.rs
crates/gpapi/benches/: auth_benchmark.rs.example
crates/gpapi/src/: auth.rs  cookie_store.rs  credential.rs  error.rs  gp_params.rs  lib.rs  logger.rs  session.rs
crates/gpapi/src/clap/: args.rs  mod.rs
crates/gpapi/src/gateway/: hip.rs  login.rs  mod.rs  parse_gateways.rs  session.rs
crates/gpapi/src/os_profile/: host_identity.rs  mod.rs  serial_number.rs
crates/gpapi/src/params/: credential.rs  gateway_login.rs  gateway_prelogin.rs  mod.rs  portal_getconfig.rs  portal_prelogin.rs
crates/gpapi/src/portal/: config.rs  csc.rs  mod.rs  prelogin.rs
crates/gpapi/src/process/: auth_launcher.rs  browser_authenticator.rs  command_traits.rs  desktop_session_env.rs  gui_helper_launcher.rs  gui_launcher.rs  hip_launcher.rs  mod.rs  service_launcher.rs  users.rs
crates/gpapi/src/service/: event.rs  mod.rs  request.rs  session.rs  vpn_env.rs  vpn_state.rs
crates/gpapi/src/utils/: base64.rs  checksum.rs  crypto.rs  endpoint.rs  env_file.rs  env_utils.rs  host_utils.rs  lock_file.rs  mod.rs  openssl.rs  redact.rs  request.rs  runtime.rs  shutdown_signal.rs  window.rs  xml.rs
crates/gpapi/tests/files/: badssl.com-client-unencrypted.pem  badssl.com-client.pem  gateway_login.xml  portal_config.xml  prelogin_saml.xml  prelogin_standard.xml
debian/: README.Debian  changelog  control  copyright  postinst  rules  watch
docs/: bsd-source-build.md  developers-guide.adoc  helper_pixi_install.adoc  index.adoc  operators-guide.adoc  roadmap.adoc
gpauth/: Cargo.toml
gpclient/: Cargo.toml
gpcommon/: Cargo.toml
gpgui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
gpgui/src-tauri/: Cargo.toml  tauri.conf.json
gpgui/src-tauri/src/: auth.rs  commands.rs  crypto.rs  main.rs  settings.rs  setup.rs  storage.rs  utils.rs
gpservice/: Cargo.toml  build.rs
gpservice/src/: main.rs
packaging/: README-conda.md  my-snap-name_0.1_amd64.snap  post-install-message.sh  test-setup.sh  verify-installation.sh
patches/: user-configurable-globalprotect-app-version.patch
scripts/: _archive-all.sh  build.sh  bump-version.sh  create-gp-version-override.sh  deb-install.sh  gh-release.sh  install-debian.sh  install-fedora.sh  install-opensuse.sh  install-ubuntu.sh  install.sh  open-flake-hashes-pr.sh  openconnect-gp  ppa-publish.sh  prepare-packaging.sh  release-archive-all.sh  release-assets.sh  release-notes.sh  release.sh  (+9 more)
(+168 files in other folders)
