[workspace]
resolver = "2"

members = [
  "crates/*",
  "apps/gpclient",
  "apps/gpservice",
  "apps/gpauth",
  "apps/gpgui-helper/src-tauri",
]

[workspace.package]
rust-version = "1.80"
version = "2.4.2"
authors = ["Kevin Yue <k3vinyue@gmail.com>"]
homepage = "https://github.com/yuezk/GlobalProtect-openconnect"
edition = "2021"
license = "GPL-3.0"

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
clap-verbosity-flag = "3"
ctrlc = "3.4"
directories = "5.0"
dns-lookup = "2.0.4"
env_logger = "0.11"
is_executable = "1.0"
log = "0.4"
regex = "1"
reqwest = { version = "0.12", features = ["native-tls", "json"] }
openssl = "0.10"
pem = "3"
roxmltree = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.33"
tempfile = "3.8"
tokio = { version = "1" }
tokio-util = "0.7"
url = "2.4"
urlencoding = "2.1.3"
axum = "0.8"
futures = "0.3"
futures-util = "0.3"
uzers = "0.12"
whoami = "1"
thiserror = "2"
redact-engine = "0.1"
compile-time = "0.2"
serde_urlencoded = "0.7"
md5 = "0.7"
sha256 = "1"
which = "7"

# Tauri dependencies
tauri = { version = "2" }
specta = "=2.0.0-rc.20"

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*
