[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14", features = ["full"] }
tokio-util = "0.7"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.0"
serde_json = "1.0"
async-trait = "0.1"
ring = "0.16"
data-encoding = "2.3"
log = "0.4"

[build-dependencies]
cc = "1.0"
