[package]
name = "gpservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpcommon = { path = "../gpcommon" }
tokio = { version = "1", features = ["full"] }
log = "0.4"
fern = "0.6"
humantime = "2.1"
# warp = "0.3"
# aes-gcm = "0.10"
# procfs = "0.15"

[build-dependencies]
gpcommon = { path = "../gpcommon" }
