[package]
name = "gpauth"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
gpapi = { path = "../../crates/gpapi", features = [
  "tauri",
  "clap",
  "browser-auth",
] }

tauri = { workspace = true }

anyhow.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
regex.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tempfile.workspace = true
html-escape = "0.2.13"
compile-time.workspace = true

[target.'cfg(not(target_os = "macos"))'.dependencies]
webkit2gtk = "2"
