[package]
name = "gpclient"
rust-version.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../../crates/common" }
gpapi = { path = "../../crates/gpapi", features = ["clap"] }
openconnect = { path = "../../crates/openconnect" }

anyhow.workspace = true
askama.workspace = true
chrono.workspace = true
clap.workspace = true
env_logger.workspace = true
inquire = "0.9"
log.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
sysinfo.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
whoami.workspace = true
tempfile.workspace = true
directories.workspace = true
compile-time.workspace = true
netdev.workspace = true
xmltree.workspace = true

[target.'cfg(target_os="windows")'.dependencies]
reqwest = { workspace = true, features = ["native-tls-vendored", "json"] }

[target.'cfg(target_family="unix")'.dependencies]
reqwest.workspace = true

[features]
default = ["webview-auth"]
webview-auth = ["gpapi/webview-auth"]
