[package]
name = "gpapi"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
license = "MIT"

[dependencies]
anyhow.workspace = true
base64.workspace = true
dns-lookup.workspace = true
log.workspace = true
reqwest.workspace = true
openssl.workspace = true
pem.workspace = true
roxmltree.workspace = true
serde.workspace = true
specta = { workspace = true, features = ["derive"] }
urlencoding.workspace = true
tokio.workspace = true
serde_json.workspace = true
whoami.workspace = true
tempfile.workspace = true
thiserror.workspace = true
chacha20poly1305 = { version = "0.10", features = ["std"] }
redact-engine.workspace = true
url.workspace = true
regex.workspace = true
uzers.workspace = true
serde_urlencoded.workspace = true
md5.workspace = true
sha256.workspace = true

tauri = { workspace = true, optional = true }
clap = { workspace = true, optional = true }

[features]
tauri = ["dep:tauri"]
clap = ["dep:clap"]
webview-auth = []
