[package]
name = "gpgui-helper"
rust-version.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
gpapi = { path = "../../../crates/gpapi", features = ["tauri", "clap"] }
tauri.workspace = true

tokio.workspace = true
anyhow.workspace = true
log.workspace = true
clap.workspace = true
compile-time.workspace = true
env_logger.workspace = true
futures-util.workspace = true
tempfile.workspace = true
reqwest = { workspace = true, features = ["stream"] }

[features]
default = ["tauri/custom-protocol"]
